--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -5,12 +5,13 @@
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>Facelet Title</title>
+        #{database.m()}
         <script id="globals" values="#{a.message}"></script>
         <h:outputStylesheet library="css" name="tails.css" />
     </h:head>
     <h:body class="">
         <f:metadata>
-                <f:viewAction action="account/login"/>
+                <!--<f:viewAction action="account/login"/>-->
         </f:metadata>
         Hello from Facelets emma azza
     </h:body>
