Adding background image in authentication pages

--- a/web/account/login.xhtml
+++ b/web/account/login.xhtml
@@ -7,9 +7,10 @@
     <title>BetterCanvas - Login</title>
     <!-- <h:outputStylesheet library="css" name="tails.css" /> -->
     <link href="../resources/css/tails.css" rel="stylesheet" />
+    
 </h:head>
 <h:body>
-    <div class="w-full h-full fixed z-[-99999]">
+    <div id="maindiv" class="w-full h-full fixed z-[-99999]">
         <div class="w-[40%] py-3 m-auto mt-10 rounded-lg shadow-lg bg-gradient-to-br from-red-600 to-red-900">
             <h:form id="loginform">
                 <div class="mb-3">
