--- a/web/account/password.xhtml
+++ b/web/account/password.xhtml
@@ -9,7 +9,7 @@
         <link href="../resources/css/tails.css" rel="stylesheet" />
     </h:head>
     <h:body>
-        <div class="w-full h-full fixed z-[-99999]">
+        <div id="sifreunutma" class="w-full h-full fixed z-[-99999]">
             <h:form id="resetform">
                 <div class="w-[40%] py-3 m-auto mt-10 rounded-lg shadow-lg bg-gradient-to-br from-red-600 to-red-900">
                     <div class="mb-3">
