--- a/web/account/register.xhtml
+++ b/web/account/register.xhtml
@@ -10,8 +10,8 @@
     <h:outputScript library="js" name="functions.js" />
 </h:head>
 <h:body>
-    <div class="w-full h-full relative">
-        <h:form id="registerform">
+    <div class=" sifreunutma registImg w-full h-full relative">
+        <h:form id="registerform" >
             <div class="w-[40%] mx-auto mt-5 rounded-lg mb-5 shadow-lg bg-gradient-to-br from-red-600 to-red-900">
                 <div class="mb-3">
                     <p class="text-5xl text-white font-bold text-center p-2">
@@ -21,7 +21,6 @@
                 </div>
 
                 <div class="px-3">
-
                     <div class="text-red-700 relative mt-3">
                         <label for="name" class="block text-white font-bold">Name
                         </label>
