used the color of some pages and fixed the SQL code to change the password &  email

--- a/web/student/index.xhtml
+++ b/web/student/index.xhtml
@@ -28,12 +28,13 @@
 
 
 
-        <title>Leon Emmanuel ISHIMWE - BetterCanvas</title>
+        <title>BetterCanvas</title>
 
         <style>
 
             h3 {
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                color: rgb(153, 27, 27);
             }
 
             .courses {
@@ -66,7 +67,10 @@
                 list-style-type: none;
             }
             a{
-                color: blue;
+                color: rgb(153, 27, 27);
+            }
+            .card-title, .card-text {
+                color: rgb(153, 27, 27);
             }
         </style>
     </h:head>
