--- a/web/teacher/people.xhtml
+++ b/web/teacher/people.xhtml
@@ -9,9 +9,11 @@
     <h:body>
         <ui:composition template="common.xhtml">
             <ui:define name="title">
-                <h4 class="ml-10 p-3 text-4xl font-bold text-red-800"><span class="shortName">BILMU24</span> -
+                <h4 class="ml-10 p-3 text-4xl font-bold text-red-800"> 
                     <span>PEOPLE</span></h4>
+                
             </ui:define>
+            <!--  <span class="shortName">BILMU24</span>-->
 
             <ui:define name="content">
                 <div class="container-fluid">
