--- a/web/student/availablecourse.xhtml
+++ b/web/student/availablecourse.xhtml
@@ -10,7 +10,7 @@
 <h:body>
     <ui:composition template="common.xhtml">
         <ui:define name="title">
-            <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">Leon Emmanuel ISHIMWE</h1>
+            <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">#{sessionData.user.fullname}</h1>
         </ui:define>
 
         <ui:define name="content">
