--- a/web/student/grades.xhtml
+++ b/web/student/grades.xhtml
@@ -9,8 +9,9 @@
 <h:body>
     <ui:composition template="common.xhtml">
         <ui:define name="title">
-            <h4 class="ml-10 p-3 text-4xl font-bold text-red-800"><span class="shortName">BILMU24</span> - <span
-                    class="courseName">GRADES</span><span class="studentName">EDSON CASIMIRO</span></h4>
+            <h4 class="ml-10 p-3 text-4xl font-bold text-red-800">
+                <span class="studentName">#{sessionData.user.fullname}'s <span
+                    class="courseName">GRADES </span></span></h4>
         </ui:define>
 
         <ui:define name="content">
