--- a/web/student/home.xhtml
+++ b/web/student/home.xhtml
@@ -10,7 +10,7 @@
     <h:body class="">
         <ui:composition template="common.xhtml">
             <ui:define name="title">
-                <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">Leon Emmanuel ISHIMWE - Dashboard</h1>
+                <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">#{sessionData.user.fullname} - Dashboard</h1>
             </ui:define>
             <ui:define name="content">
                 <h:panelGroup class="hidden">
