--- a/web/student/quizz.xhtml
+++ b/web/student/quizz.xhtml
@@ -9,7 +9,7 @@
     <h:body>
         <ui:composition template="common.xhtml">
             <ui:define name="title">
-                <h4 class="ml-10 p-3 text-4xl font-bold text-red-800"><span class="shortName">BILMU24</span> - <span
+                <h4 class="ml-10 p-3 text-4xl font-bold text-red-800"><span
                         class="courseName">QUIZZ</span></h4>
             </ui:define>
 
