--- a/web/teacher/home.xhtml
+++ b/web/teacher/home.xhtml
@@ -16,7 +16,7 @@
                 </f:metadata>
             </ui:define>
             <ui:define name="title">
-                <h4 class="ml-10 p-3 text-4xl font-bold text-red-800"><span class="shortName">#{ccourse.shortName}</span> - <span
+                <h4 class="ml-10 p-3 text-4xl font-bold text-red-800"><span class="shortName">#{sessionData.currentCourse} #{ccourse.shortName}</span> - <span
                         class="courseName">#{ccourse.name}</span></h4>
             </ui:define>
 
