--- a/web/teacher/index.xhtml
+++ b/web/teacher/index.xhtml
@@ -12,7 +12,7 @@
     <h:body>
         <ui:composition template="common.xhtml">
             <ui:define name="title">
-                <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">Dashboard</h1>
+                <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">#{sessionData.user.fullname} - Dashboard</h1>
             </ui:define>
 
             <ui:define name="content">
