--- a/web/teacher/footer.xhtml
+++ b/web/teacher/footer.xhtml
@@ -2,32 +2,38 @@
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:ui="http://java.sun.com/jsf/facelets">
-<h:body class="">
-    <ui:composition>
-        <nav class="nav">
-            <h:link outcome="/teacher/index.xhtml" class="nav__link nav__link--active ">
-                <i class="material-icons nav__icon "> dashboard</i>
-                <span class="nav__text">Dashboard</span>
-            </h:link>
+      xmlns:ui="http://java.sun.com/jsf/facelets">
+    <h:body class="">
+        <ui:composition>
+            <nav class="nav">
+                <h:link outcome="/teacher/index.xhtml" class="nav__link nav__link--active ">
+                    <i class="material-icons nav__icon "> dashboard</i>
+                    <span class="nav__text">Dashboard</span>
+                </h:link>
 
-            <a href="#" class="nav__link" onclick="toggle('coursesmodal')">
-                <i class="material-icons nav__icon">cast_for_education</i>
-                <span class="nav__text">Courses</span>
-            </a>
+                <a href="#" class="nav__link" onclick="toggle('coursesmodal')">
+                    <i class="material-icons nav__icon">cast_for_education</i>
+                    <span class="nav__text">Courses</span>
+                </a>
 
-            <h:link outcome="/teacher/inbox.xhtml" class="nav__link">
-                <i class="material-icons nav__icon"> inbox</i>
-                <span class="nav__text">Inbox</span>
-            </h:link>
+                <h:link outcome="/teacher/inbox.xhtml" class="nav__link">
+                    <i class="material-icons nav__icon"> inbox</i>
+                    <span class="nav__text">Inbox</span>
+                </h:link>
 
-            <h:link outcome="/teacher/account.xhtml" class="nav__link">
-                <i class="material-icons nav__icon"> person</i>
-                <span class="nav__text">Profile</span>
-            </h:link>
+                <h:link outcome="/student/account.xhtml" class="nav__link relative">
+                    <i class="material-icons nav__icon"> person</i>
+                    <span class="nav__text">Profile</span>
+                    <div class="absolute bg-white text-red-600 bottom-0 right-0">
+                        <h:form>
+                            <h:commandLink class="bg-white text-red-600" value="out" action="#{userData.logout}">
+                            </h:commandLink>
+                        </h:form>
+                    </div>
+                </h:link>
 
-        </nav>
-    </ui:composition>
-</h:body>
+            </nav>
+        </ui:composition>
+    </h:body>
 
 </html>
