fixed minor probs

--- a/web/student/grades.xhtml
+++ b/web/student/grades.xhtml
@@ -40,7 +40,7 @@
 
                         </div>
                         </ui:repeat>
-                        <div class="student">
+<!--                        <div class="student">
                             <tr>
 
                                 <td>midterm exam </td>
@@ -50,7 +50,7 @@
 
                             </tr>
 
-                        </div>
+                        </div>-->
 
                         <div class="total" style="font-size: 50px;">
                             <tr style="font-size: 20px;">
