--- a/web/student/index.xhtml
+++ b/web/student/index.xhtml
@@ -102,7 +102,7 @@
                             </h:link>
                         </ui:repeat>
 
-                        <a href="#">
+<!--                        <a href="#">
                             <div class="card mb-3">
                                 <img src="http://www.clemson.edu/degrees/images/headers/25.jpg" class="card-img-top"
                                      alt="..."></img>
@@ -112,7 +112,7 @@
                                     </p>
                                 </div>
                             </div>
-                        </a>
+                        </a>-->
                     </div>
                 </div>
                 <!--to do-->
@@ -138,13 +138,13 @@
                         </div>
                         </ui:repeat>
 
-                        <div class="container todo p-2 mb-6">
+<!--                        <div class="container todo p-2 mb-6">
                             <i class="fas fa-volume-up"></i> <a href="#" class="text-blue-700 underline">Title here, for sure</a><br />
                             <ul>
                                 <li><span>Summary is going to be here</span></li>
                                 <li>Apr 27 at 12:23pm</li>
                             </ul>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
