--- a/web/student/quizz.xhtml
+++ b/web/student/quizz.xhtml
@@ -30,21 +30,21 @@
                             </div>
                         </ui:repeat>
 
-                        <div class="quizz">
+<!--                        <div class="quizz">
                             <a href="#">
                                 <h5>Programming Aplication vize</h5>
                             </a>
                             Start date:<span>25-12-2021</span> | Deadline:<span> 27-12-2021</span> | <span>100</span>pts
 
-                        </div>
+                        </div>-->
 
-                        <div class="quizz">
+<!--                        <div class="quizz">
                             <a href="#">
                                 <h5>Programming Aplication vize</h5>
                             </a>
                             Start date:<span>25-12-2021</span> | Deadline:<span> 27-12-2021</span> | <span>100</span>pts
 
-                        </div>
+                        </div>-->
 
                     </div>
                 </div>
