--- a/web/teacher/announcement.xhtml
+++ b/web/teacher/announcement.xhtml
@@ -19,7 +19,7 @@
         <ui:define name="metadata">
         </ui:define>
         <ui:define name="title">
-            <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">Announcements</h1>
+            <h1 class="ml-10 p-3 text-4xl font-bold text-red-800">#{teacherBean.currentCourse.name} - Announcements</h1>
         </ui:define>
         <ui:define name="content">
             <div class="fixed w-full h-full bg-white " id="newannouncement" style="display: none">
@@ -48,18 +48,18 @@
                                 <hr />
                             </div>
                         </ui:repeat>
-                        <div class=" ">
+<!--                        <div class=" ">
                             <h4>Bilgisayar mughendisligine giris</h4>
                             <p>summary is going to be here </p>
                             <span>23/07/2021 16pm</span>
                             <hr />
-                        </div>
-                        <div class=" ">
+                        </div>-->
+<!--                        <div class=" ">
                             <h4>Bilgisayar mughendisligine giris</h4>
                             <p>summary is going to be here </p>
                             <span>23/07/2021 16pm</span>
                             <hr />
-                        </div>
+                        </div>-->
                     </div>
 
 
