--- a/web/teacher/grades.xhtml
+++ b/web/teacher/grades.xhtml
@@ -18,7 +18,7 @@
                                 </f:metadata>-->
             </ui:define>
             <ui:define name="title">
-                <h1 class="text-5xl font-bold text-center p-2">All Grades
+                <h1 class="text-5xl font-bold text-center p-2">#{teacherBean.currentCourse.name} - All Grades
                     <button class="text-2xl text-white bg-red-800 p-3 rounded-lg" onclick="openGrades()">+ Add/Edit
                         Grades</button>
                 </h1>
