--- a/web/teacher/quizzes.xhtml
+++ b/web/teacher/quizzes.xhtml
@@ -10,7 +10,7 @@
     <h:body>
         <ui:composition template="common.xhtml">
             <ui:define name="title">
-                <h1 class="text-5xl font-bold text-center p-2">List of past Quizzes
+                <h1 class="text-5xl font-bold text-center p-2">#{teacherBean.currentCourse.name} - List of past Quizzes
                     <button class="text-2xl text-white bg-red-800 p-3 rounded-lg" onclick="openQuiz()">+ Create New
                         Quiz</button>
                 </h1>
