--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -4,6 +4,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
+        <meta http-equiv="Refresh" content= "0; URL=account/login.xhtml"/>
         <title>Facelet Title</title>
         #{database.m()}
         <script id="globals" values="#{a.message}"></script>
