--- a/web/teacher/common.xhtml
+++ b/web/teacher/common.xhtml
@@ -59,22 +59,24 @@
             </div>
 
             <div class="fixed w-[30%] bg-red-800 top-0 bottom-[80px] hidden" id="coursesmodal">
-                <h1 class="text-3xl font-bold text-white text-center">My Courses</h1>
-                <div class="overflow-y-auto w-full h-[98%]">
-                    <ui:repeat value="#{teacherBean.courses}" var="course" varStatus="status">
-                        <div class="bg-white m-3 p-3 rounded-xl">
-                            <h1 class="font-bold text-2xl text-red-800 drop-shadow-md">
-                                <h:link outcome="/teacher/home.xhtml" value="#{course.name}">
-                                    <f:param name="course" value="#{course.id}" />
+                <h:panelGroup id="coursesmodal1">
+                    <h1 class="text-3xl font-bold text-white text-center">My Courses</h1>
+                    <div class="overflow-y-auto w-full h-[98%]">
+                        <ui:repeat value="#{teacherBean.courses}" var="course" varStatus="status">
+                            <div class="bg-white m-3 p-3 rounded-xl">
+                                <h1 class="font-bold text-2xl text-red-800 drop-shadow-md">
+                                    <h:link outcome="/teacher/home.xhtml" value="#{course.name}">
+                                        <f:param name="course" value="#{course.id}" />
 
-                                </h:link>
+                                    </h:link>
 
-                            </h1>
-                            <p>#{course.shortName}</p>
-                        </div>
-                    </ui:repeat>
+                                </h1>
+                                <p>#{course.shortName}</p>
+                            </div>
+                        </ui:repeat>
 
-                </div>
+                    </div>
+                </h:panelGroup>
             </div>
 
             <ui:include src="footer.xhtml" />
