--- a/web/teacher/footer.xhtml
+++ b/web/teacher/footer.xhtml
@@ -21,7 +21,7 @@
                     <span class="nav__text">Inbox</span>
                 </h:link>
 
-                <h:link outcome="/student/account.xhtml" class="nav__link relative">
+                <h:link outcome="/teacher/account.xhtml" class="nav__link relative">
                     <i class="material-icons nav__icon"> person</i>
                     <span class="nav__text">Profile</span>
                     <div class="absolute bg-white text-red-600 bottom-0 right-0">
