--- a/web/teacher/grades.xhtml
+++ b/web/teacher/grades.xhtml
@@ -70,7 +70,7 @@
                         </h:form>
                     </h:panelGroup>
                     <div id="disp1" class="">
-                        <button id="disp2" class="p-5 font-bold text-6xl text-white bg-green-800 opacity-0 animate-mine">Saved via ajax</button>
+                        <button id="disp2" class="p-5 font-bold text-6xl text-white bg-green-800 opacity-0 animate-mine hidden">Saved via ajax</button>
                     </div>
 
 
