--- a/web/student/grades.xhtml
+++ b/web/student/grades.xhtml
@@ -32,7 +32,7 @@
                             <tr>
 
                                 <td>#{grade.getColumnObject(1)} </td>
-                                <td>#{grade.getColumnObject(2)} </td>
+                                <td>#{generalUtils.format(grade.getColumnObject(2))} </td>
                                 <td class="points">#{grade.getColumnObject(3)} </td>
                                 <td class="range">#{grade.getColumnObject(4)} </td>
 
