--- a/web/teacher/announcement.xhtml
+++ b/web/teacher/announcement.xhtml
@@ -45,7 +45,7 @@
                             <div class=" ">
                                 <h4>#{announcement.getColumnObject(1)}</h4>
                                 <p>#{announcement.getColumnObject(2)} </p>
-                                <span>#{announcement.getColumnObject(4)}</span>
+                                <span>#{generalUtils.format(announcement.getColumnObject(4))}</span>
                                 <hr />
                             </div>
                         </ui:repeat>
