Adding logout button and background image in auth files

--- a/web/account/password.xhtml
+++ b/web/account/password.xhtml
@@ -8,8 +8,15 @@
         <!-- <h:outputStylesheet library="css" name="tails.css" /> -->
         <link href="../resources/css/tails.css" rel="stylesheet" />
     </h:head>
-    <h:body>
-        <div id="sifreunutma" class="w-full h-full fixed z-[-99999]">
+    <h:body style="margin: 0;">
+        <div style="background-image: url(https://pbs.twimg.com/media/ElPAQIsWkAAL6Z9.jpg);
+         
+         background-position: center;
+         background-repeat: no-repeat;
+         background-size: cover;
+         position: fixed;
+        "
+        id="sifreunutma" class="w-full h-full fixed z-[-99999]">
             <h:form id="resetform">
                 <div class="w-[40%] py-3 m-auto mt-10 rounded-lg shadow-lg bg-gradient-to-br from-red-600 to-red-900">
                     <div class="mb-3">
